update chocoq demo

--- a/examples/ipynb/2_1_vectorization.ipynb
+++ b/examples/ipynb/2_1_vectorization.ipynb
@@ -25,9 +25,7 @@
     "%matplotlib inline\n",
     "\n",
     "import os\n",
-    "os.chdir(\"..\")\n",
-    "import sys\n",
-    "sys.path.append('..')\n",
+    "os.chdir(\"../..\")\n",
     "import logging\n",
     "logging.basicConfig(level=logging.WARN)\n",
     "\n",
@@ -68,26 +66,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       ┌────────────────┐  ░                      ░ ┌─────────────────┐  ░ »\n",
-      "q_0: ──┤ U(3π/5,2π/5,π) ├──░──────────■───────────░─┤ U(3π/5,π/5,π/5) ├──░─»\n",
-      "     ┌─┴────────────────┴┐ ░        ┌─┴─┐         ░ └─────────────────┘  ░ »\n",
-      "q_1: ┤ U(7π/5,3π/5,9π/5) ├─░────────┤ X ├─────────░──────────────────────░─»\n",
-      "     ├───────────────────┤ ░ ┌──────┴───┴───────┐ ░ ┌──────────────────┐ ░ »\n",
-      "q_2: ┤ U(9π/5,4π/5,3π/5) ├─░─┤ U(8π/5,4π/5,π/5) ├─░─┤ U(7π/5,π/5,2π/5) ├─░─»\n",
-      "     ├───────────────────┤ ░ └──────────────────┘ ░ └──────────────────┘ ░ »\n",
-      "q_3: ┤ U(4π/5,2π/5,8π/5) ├─░──────────────────────░──────────────────────░─»\n",
-      "     └───────────────────┘ ░                      ░                      ░ »\n",
-      "«                          ░                     ░ \n",
-      "«q_0: ─────────────────────░─────────────────────░─\n",
-      "«                          ░                     ░ \n",
-      "«q_1: ─────────────────────░─────────────────────░─\n",
-      "«     ┌──────────────────┐ ░ ┌─────────────────┐ ░ \n",
-      "«q_2: ┤ U(π/5,π/10,8π/5) ├─░─┤ U(2π,2π/5,2π/5) ├─░─\n",
-      "«     └──────────────────┘ ░ └─────────────────┘ ░ \n",
-      "«q_3: ─────────────────────░─────────────────────░─\n",
-      "«                          ░                     ░ \n",
-      "target gate: {'name': 'u', 'qubits': [1], 'params': [4.39822971502571, 1.8849555921538759, 5.654866776461628]}\n",
-      "generate paths: {'u-1, parallel, u-0', 'u-1, parallel, u-0, parallel, u-2', 'u-1, parallel, u-3', 'u-1, parallel, u-0, next, u-2', 'u-1, parallel, u-0, next, cx-0-1', 'u-1', 'u-1, parallel, u-2', 'u-1, next, cx-0-1', 'u-1, next, u-2', 'u-1, parallel, u-0, parallel, u-3'}\n"
+      "     ┌───────────────────┐ ░                       ░                           »\n",
+      "q_0: ┤ U(6π/5,6π/5,4π/5) ├─░───────────────────────░────────────────────────■──»\n",
+      "     └──┬─────────────┬──┘ ░ ┌───────────────────┐ ░ ┌───────────────────┐  │  »\n",
+      "q_1: ───┤ U(9π/5,π,π) ├────░─┤ U(4π/5,8π/5,2π/5) ├─░─┤ U(9π/5,6π/5,6π/5) ├──┼──»\n",
+      "       ┌┴─────────────┴─┐  ░ └───────────────────┘ ░ └───────────────────┘┌─┴─┐»\n",
+      "q_2: ──┤ U(8π/5,π,9π/5) ├──░───────────■───────────░──────────────────────┤ X ├»\n",
+      "       ├───────────────┬┘  ░         ┌─┴─┐         ░                      └───┘»\n",
+      "q_3: ──┤ U(2π/5,π/5,π) ├───░─────────┤ X ├─────────░───────────────────────────»\n",
+      "       └───────────────┘   ░         └───┘         ░                           »\n",
+      "«      ░                       ░       ░ \n",
+      "«q_0: ─░───────────────────────░───■───░─\n",
+      "«      ░ ┌───────────────────┐ ░ ┌─┴─┐ ░ \n",
+      "«q_1: ─░─┤ U(8π/5,2π/5,6π/5) ├─░─┤ X ├─░─\n",
+      "«      ░ └───────────────────┘ ░ └───┘ ░ \n",
+      "«q_2: ─░───────────────────────░───────░─\n",
+      "«      ░                       ░       ░ \n",
+      "«q_3: ─░───────────────────────░───────░─\n",
+      "«      ░                       ░       ░ \n",
+      "target gate: {'name': 'cx', 'qubits': [2, 3], 'params': []}\n",
+      "generate paths: {'cx-2-3, former, u-2', 'cx-2-3, next, cx-0-2', 'cx-2-3, parallel, u-1', 'cx-2-3, parallel, u-1, former, u-0', 'cx-2-3, parallel, u-1, former, u-3', 'cx-2-3, parallel, u-1, former, u-2', 'cx-2-3, parallel, u-1, former, u-1', 'cx-2-3, parallel, u-1, next, u-1', 'cx-2-3, former, u-0', 'cx-2-3, parallel, u-1, next, cx-0-2', 'cx-2-3, former, u-3', 'cx-2-3, next, u-1', 'cx-2-3', 'cx-2-3, former, u-1'}\n"
      ]
     }
    ],
@@ -134,7 +132,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 102/102 [00:00<00:00, 214.66it/s]\n"
+      "100%|██████████| 102/102 [00:00<00:00, 214.55it/s]\n"
      ]
     },
     {
@@ -179,8 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vector is [0.5 0.5 0.5 0.5 0.  0.  0.5 0.  0.5 1.  0.  0.  0.5 0.  0.  0.  0.  0.\n",
-      " 0.  0.  0.  0.  0.5 0.  0.  0.  0.  0.  0.5 0.  0.  0.  0.  0.  0.  0.\n",
+      "vector is [0.5 1.  0.5 0.  0.5 0.5 0.  0.5 0.5 0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      " 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.5 0.  0.  0.  0.\n",
       " 0. ]\n"
      ]
     }
@@ -213,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 6, 8, 9, 12, 22, 28] = [0, 28, 1, 2, 3, 6, 22, 8, 9, 12]\n"
+      "[0, 1, 2, 4, 5, 7, 8, 31] = [0, 1, 2, 31, 4, 5, 7, 8]\n"
      ]
     }
    ],
@@ -242,32 +240,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      ┌──────────────────────────┐ ░                                   ░      »\n",
-      "q_0: ─┤ U(5.3992,5.2086,0.46458) ├─░───────────────────────────────■───░──────»\n",
-      "      └┬───────────────────────┬─┘ ░                               │   ░      »\n",
-      "q_1: ──┤ U(4.802,5.3146,3.443) ├───░───────────────────────────────┼───░──────»\n",
-      "      ┌┴───────────────────────┴─┐ ░ ┌──────────────────────────┐  │   ░      »\n",
-      "q_2: ─┤ U(0.67875,3.1333,2.3294) ├─░─┤ U(5.2502,1.6739,0.52743) ├──┼───░───■──»\n",
-      "     ┌┴──────────────────────────┤ ░ └──────────────────────────┘┌─┴─┐ ░   │  »\n",
-      "q_3: ┤ U(0.016824,4.0638,2.9548) ├─░─────────────────────────────┤ X ├─░───┼──»\n",
-      "     └┬─────────────────────────┬┘ ░                             └───┘ ░   │  »\n",
-      "q_4: ─┤ U(5.2491,1.8757,3.8353) ├──░──────────────■────────────────────░───┼──»\n",
-      "      ├─────────────────────────┤  ░            ┌─┴─┐                  ░ ┌─┴─┐»\n",
-      "q_5: ─┤ U(5.8717,1.4803,1.3123) ├──░────────────┤ X ├──────────────────░─┤ X ├»\n",
-      "      └─────────────────────────┘  ░            └───┘                  ░ └───┘»\n",
-      "«      ░ \n",
-      "«q_0: ─░─\n",
-      "«      ░ \n",
-      "«q_1: ─░─\n",
-      "«      ░ \n",
-      "«q_2: ─░─\n",
-      "«      ░ \n",
-      "«q_3: ─░─\n",
-      "«      ░ \n",
-      "«q_4: ─░─\n",
-      "«      ░ \n",
-      "«q_5: ─░─\n",
-      "«      ░ \n"
+      "      ┌────────────────────────┐ ░ ┌─────────────────────────┐ ░ \n",
+      "q_0: ─┤ U(6.557,7.1919,16.144) ├─░─┤ U(2.8539,5.7549,1.8995) ├─░─\n",
+      "     ┌┴────────────────────────┤ ░ └─────────────────────────┘ ░ \n",
+      "q_1: ┤ U(1.4982,1.3701,4.8548) ├─░──────────────■──────────────░─\n",
+      "     └┬────────────────────────┤ ░              │              ░ \n",
+      "q_2: ─┤ U(6.206,5.0463,1.6472) ├─░──────────────┼──────────────░─\n",
+      "      └────────────────────────┘ ░              │              ░ \n",
+      "q_3: ────────────────────────────░──────────────┼──────────────░─\n",
+      "     ┌─────────────────────────┐ ░            ┌─┴─┐            ░ \n",
+      "q_4: ┤ U(2.0089,1.6448,1.3217) ├─░────────────┤ X ├────────────░─\n",
+      "     ├─────────────────────────┤ ░            └───┘            ░ \n",
+      "q_5: ┤ U(1.3615,1.4615,1.9918) ├─░─────────────────────────────░─\n",
+      "     └─────────────────────────┘ ░                             ░ \n"
      ]
     }
    ],
