--- a/examples/ipynb/2_6_extend_framework_bug_identification.ipynb
+++ b/examples/ipynb/2_6_extend_framework_bug_identification.ipynb
@@ -26,15 +26,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-09 18:58:12,581\tINFO worker.py:1724 -- Started a local Ray instance.\n"
+      "2025-02-08 11:00:45,759\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "os.chdir(\"..\")\n",
-    "import sys\n",
-    "sys.path.append('..')\n",
+    "os.chdir(\"../..\")\n",
     "import logging\n",
     "logging.basicConfig(level=logging.WARN)\n",
     "\n",
@@ -229,11 +227,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: divide by zero encountered in det\n",
+      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2154: RuntimeWarning: divide by zero encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n",
-      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2180: RuntimeWarning: invalid value encountered in det\n",
+      "/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/numpy/linalg/linalg.py:2154: RuntimeWarning: invalid value encountered in det\n",
       "  r = _umath_linalg.det(a, signature=signature)\n",
-      "100%|██████████| 32/32 [00:05<00:00,  6.27it/s]\n"
+      "100%|██████████| 32/32 [00:29<00:00,  1.10it/s]\n"
      ]
     }
    ],
@@ -272,37 +270,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "algrithm: qft_5, identify_rate: 0.0\n",
-      "algrithm: hs_5, identify_rate: 100.0\n",
+      "algrithm: qft_5, identify_rate: 100.0\n",
+      "algrithm: hs_5, identify_rate: 33.333333333333336\n",
       "algrithm: ising_5, identify_rate: 0.0\n",
-      "algrithm: qknn_5, identify_rate: 0.0\n",
+      "algrithm: qknn_5, identify_rate: 100.0\n",
       "algrithm: qsvm_5, identify_rate: 100.0\n",
-      "algrithm: vqc_5, identify_rate: 33.333333333333336\n",
-      "algrithm: ghz_5, identify_rate: 33.333333333333336\n",
-      "algrithm: grover_5, identify_rate: 66.66666666666667\n",
-      "algrithm: qft_6, identify_rate: 66.66666666666667\n",
-      "algrithm: hs_6, identify_rate: 0.0\n",
-      "algrithm: ising_6, identify_rate: 33.333333333333336\n",
-      "algrithm: qknn_6, identify_rate: 33.333333333333336\n",
-      "algrithm: qsvm_6, identify_rate: 33.333333333333336\n",
-      "algrithm: vqc_6, identify_rate: 66.66666666666667\n",
-      "algrithm: ghz_6, identify_rate: 0.0\n",
+      "algrithm: vqc_5, identify_rate: 100.0\n",
+      "algrithm: ghz_5, identify_rate: 66.66666666666667\n",
+      "algrithm: grover_5, identify_rate: 100.0\n",
+      "algrithm: qft_6, identify_rate: 100.0\n",
+      "algrithm: hs_6, identify_rate: 100.0\n",
+      "algrithm: ising_6, identify_rate: 100.0\n",
+      "algrithm: qknn_6, identify_rate: 100.0\n",
+      "algrithm: qsvm_6, identify_rate: 100.0\n",
+      "algrithm: vqc_6, identify_rate: 100.0\n",
+      "algrithm: ghz_6, identify_rate: 100.0\n",
       "algrithm: grover_6, identify_rate: 100.0\n",
-      "algrithm: qft_7, identify_rate: 33.333333333333336\n",
-      "algrithm: hs_7, identify_rate: 0.0\n",
+      "algrithm: qft_7, identify_rate: 100.0\n",
+      "algrithm: hs_7, identify_rate: 66.66666666666667\n",
       "algrithm: ising_7, identify_rate: 100.0\n",
-      "algrithm: qknn_7, identify_rate: 33.333333333333336\n",
-      "algrithm: qsvm_7, identify_rate: 0.0\n",
-      "algrithm: vqc_7, identify_rate: 66.66666666666667\n",
+      "algrithm: qknn_7, identify_rate: 100.0\n",
+      "algrithm: qsvm_7, identify_rate: 100.0\n",
+      "algrithm: vqc_7, identify_rate: 100.0\n",
       "algrithm: ghz_7, identify_rate: 33.333333333333336\n",
       "algrithm: grover_7, identify_rate: 100.0\n",
-      "algrithm: qft_8, identify_rate: 66.66666666666667\n",
-      "algrithm: hs_8, identify_rate: 66.66666666666667\n",
+      "algrithm: qft_8, identify_rate: 100.0\n",
+      "algrithm: hs_8, identify_rate: 100.0\n",
       "algrithm: ising_8, identify_rate: 100.0\n",
-      "algrithm: qknn_8, identify_rate: 66.66666666666667\n",
+      "algrithm: qknn_8, identify_rate: 100.0\n",
       "algrithm: qsvm_8, identify_rate: 100.0\n",
-      "algrithm: vqc_8, identify_rate: 33.333333333333336\n",
-      "algrithm: ghz_8, identify_rate: 66.66666666666667\n",
+      "algrithm: vqc_8, identify_rate: 100.0\n",
+      "algrithm: ghz_8, identify_rate: 0.0\n",
       "algrithm: grover_8, identify_rate: 100.0\n"
      ]
     }
