--- a/examples/ipynb/3_1_verify_quantum_program.ipynb
+++ b/examples/ipynb/3_1_verify_quantum_program.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Verify quantum program by MorphQPV\n",
     "\n",
-    "**Author:** Siwei Tan & Debin Xiang\n",
+    "**Author:** Debin Xiang & Siwei Tan\n",
     "\n",
     "**Date:** 12/4/2024\n",
     "\n",
@@ -58,9 +58,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir(\"..\")\n",
-    "import sys\n",
-    "sys.path.append('..')\n",
+    "os.chdir(\"../..\")\n",
     "import logging\n",
     "logging.basicConfig(level=logging.WARN)\n",
     "\n",
@@ -95,23 +93,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "producing input circuits for random sampling: 100%|██████████| 8/8 [00:00<00:00, 116.69it/s]\n",
-      "producing input states for random sampling: 100%|██████████| 8/8 [00:00<00:00, 170.34it/s]\n",
+      "producing input circuits for random sampling: 100%|██████████| 8/8 [00:00<00:00, 27.68it/s]\n",
+      "producing input states for random sampling: 100%|██████████| 8/8 [00:00<00:00, 16.63it/s]\n",
       "producing output states:   0%|          | 0/8 [00:00<?, ?it/s]/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/pennylane/_qubit_device.py:653: UserWarning: Requested state or density matrix with finite shots; the returned state information is analytic and is unaffected by sampling. To silence this warning, set shots=None on the device.\n",
       "  warnings.warn(\n",
-      "producing output states: 100%|██████████| 8/8 [00:00<00:00, 314.69it/s]\n",
-      "producing input circuits for random sampling: 100%|██████████| 8/8 [00:00<00:00, 926.59it/s]\n",
-      "producing input states for random sampling: 100%|██████████| 8/8 [00:00<00:00, 75.51it/s]\n",
-      "producing output states: 100%|██████████| 8/8 [00:00<00:00, 205.87it/s]\n",
-      "sgd optimizing: 100%|██████████| 1000/1000 [02:00<00:00,  8.28it/s, loss=39.99592, min_loss=39.99592]   \n"
+      "producing output states: 100%|██████████| 8/8 [00:00<00:00, 21.24it/s]\n",
+      "producing input circuits for random sampling: 100%|██████████| 8/8 [00:00<00:00, 75.15it/s]\n",
+      "producing input states for random sampling: 100%|██████████| 8/8 [00:00<00:00, 25.78it/s]\n",
+      "producing output states: 100%|██████████| 8/8 [00:00<00:00, 19.24it/s]\n",
+      "sgd optimizing: 100%|██████████| 1000/1000 [15:19<00:00,  1.09it/s, loss=51.8218, min_loss=51.8218]     \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'assume': [([0], IsPure, ()), ([0], Equal, (0.4,)), ([1], IsPure, ()), ([2], IsPure, ()), ([0, 2], Equal, ())], 'gurrantee': [([1, 2], Equal, ()), ([0, 1], NotEqual, ())], 'verify': {'optimal_input_state': Array([ 0.7073993 +0.11061761j,  0.05473202+0.1502085j ,\n",
-      "        0.13060148+0.09402886j, -0.6302848 -0.18561736j], dtype=complex64), 'optimal_gurrantee_value': Array(0.3947519, dtype=float32), 'is_assume_satisfied': [Array(0.41809082, dtype=float32), Array(37.105797, dtype=float32), Array(0.02177954, dtype=float32), Array(0.12181997, dtype=float32), Array(0.08798723, dtype=float32), Array(0.5895428, dtype=float32), Array(0.3947519, dtype=float32)]}}\n"
+      "{'assume': [([0], IsPure, ()), ([0], Equal, (0.4,)), ([1], IsPure, ()), ([2], IsPure, ()), ([0, 2], Equal, ())], 'gurrantee': [([1, 2], Equal, ()), ([0, 1], NotEqual, ())], 'verify': {'optimal_input_state': Array([ 0.31564528+0.23546517j, -0.37839434+0.5465096j ,\n",
+      "       -0.18528774+0.3119534j ,  0.49633217-0.14578386j], dtype=complex64), 'optimal_gurrantee_value': Array(0.32781845, dtype=float32), 'is_assume_satisfied': [Array(0.38241148, dtype=float32), Array(48.011234, dtype=float32), Array(0.33951998, dtype=float32), Array(0.23542643, dtype=float32), Array(0.31035656, dtype=float32), Array(0.6224472, dtype=float32), Array(0.32781845, dtype=float32)]}}\n"
      ]
     }
    ],
