--- a/examples/ipynb/5_1_solve_sat_domain_problem.ipynb
+++ b/examples/ipynb/5_1_solve_sat_domain_problem.ipynb
@@ -33,9 +33,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir(\"..\")\n",
-    "import sys\n",
-    "sys.path.append('..')\n",
+    "os.chdir(\"../..\")\n",
     "import logging\n",
     "logging.basicConfig(level=logging.WARN)\n",
     "\n",
@@ -56,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Configure the model\n",
-    "file_path = \"./data/cnf_examples/UF100/uf100-01.cnf\"  # input cnf flie\n",
+    "file_path = \"./examples/data/cnf_examples/UF100/uf100-01.cnf\"  # input cnf flie\n",
     "cpu_lim = 0  # limit the cpu time (s). 0 means infinite\n",
     "mem_lim = 0  # limit the memory 0 means infinite\n",
     "strictp = True  # isStrict\n",
@@ -81,19 +79,19 @@
      "data": {
       "text/plain": [
        "{'restarts': 1,\n",
-       " 'conflicts': 13,\n",
-       " 'conflict cost': 0.084,\n",
+       " 'conflicts': 21,\n",
+       " 'conflict cost': 0.182,\n",
        " 'decisions': 1,\n",
-       " 'decisions cost': 0.026,\n",
-       " 'propagations': 580,\n",
-       " 'propagations cost': 0.286,\n",
-       " 'conflict literals': 96,\n",
-       " 'actual CPU time': 2.06211,\n",
-       " 'solving time': 1.255,\n",
-       " 'annealing time': 0.66,\n",
-       " 'simulation time': 1.13672,\n",
-       " 'quantum success number': 10,\n",
-       " 'quantum conflict number': 23,\n",
+       " 'decisions cost': 0.03,\n",
+       " 'propagations': 729,\n",
+       " 'propagations cost': 0.576,\n",
+       " 'conflict literals': 201,\n",
+       " 'actual CPU time': 2.45726,\n",
+       " 'solving time': 1.939,\n",
+       " 'annealing time': 0.78,\n",
+       " 'simulation time': 3.99217,\n",
+       " 'quantum success number': 9,\n",
+       " 'quantum conflict number': 30,\n",
        " 'quantum one time solve number': 0,\n",
        " 'is satisfiable': True,\n",
        " 'is sat': True}"
@@ -135,14 +133,14 @@
       "text/plain": [
        "{'restarts': 3,\n",
        " 'conflicts': 384,\n",
-       " 'conflict cost': 1.953,\n",
+       " 'conflict cost': 2.075,\n",
        " 'decisions': 463,\n",
-       " 'decisions cost': 0.306,\n",
+       " 'decisions cost': 0.378,\n",
        " 'propagations': 9130,\n",
-       " 'propagations cost': 4.286,\n",
+       " 'propagations cost': 6.288,\n",
        " 'conflict literals': 2416,\n",
-       " 'actual CPU time': 0.024303,\n",
-       " 'solving time': 7.896,\n",
+       " 'actual CPU time': 0.028054,\n",
+       " 'solving time': 10.143,\n",
        " 'annealing time': 0.0,\n",
        " 'simulation time': 0.0,\n",
        " 'quantum success number': 0,\n",
@@ -171,13 +169,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 116, 'minisat': 1383}, 'conflict cost': {'janus': 0.6290000000000002, 'minisat': 6.771}, 'decisions': {'janus': 29, 'minisat': 1814}, 'decisions cost': {'janus': 0.21200000000000008, 'minisat': 1.1669999999999998}, 'propagations': {'janus': 3811, 'minisat': 32252}, 'propagations cost': {'janus': 1.9580000000000002, 'minisat': 15.020000000000001}, 'conflict literals': {'janus': 731, 'minisat': 8726}, 'actual CPU time': {'janus': 19.80822, 'minisat': 0.18164499999999997}, 'solving time': {'janus': 9.712, 'minisat': 27.703}, 'annealing time': {'janus': 5.3, 'minisat': 0.0}, 'simulation time': {'janus': 10.64952, 'minisat': 0.0}, 'quantum success number': {'janus': 118, 'minisat': 0}, 'quantum conflict number': {'janus': 147, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
+      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 141, 'minisat': 1383}, 'conflict cost': {'janus': 0.9690000000000002, 'minisat': 7.191}, 'decisions': {'janus': 35, 'minisat': 1814}, 'decisions cost': {'janus': 0.4910000000000001, 'minisat': 1.3109999999999997}, 'propagations': {'janus': 4358, 'minisat': 32252}, 'propagations cost': {'janus': 3.3280000000000003, 'minisat': 15.874999999999998}, 'conflict literals': {'janus': 849, 'minisat': 8726}, 'actual CPU time': {'janus': 23.357300000000002, 'minisat': 0.19865899999999997}, 'solving time': {'janus': 14.857, 'minisat': 29.421999999999997}, 'annealing time': {'janus': 6.820000000000001, 'minisat': 0.0}, 'simulation time': {'janus': 33.625209999999996, 'minisat': 0.0}, 'quantum success number': {'janus': 131, 'minisat': 0}, 'quantum conflict number': {'janus': 210, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
      ]
     }
    ],
    "source": [
     "all_result = {}\n",
-    "dir_name = './data/cnf_examples/test'\n",
+    "dir_name = './examples/data/cnf_examples/test'\n",
     "for filename in os.listdir(dir_name):\n",
     "    janusq_res = solve_by_hyqsat(os.path.join(dir_name, filename), verb=False)\n",
     "    minisat_res = solve_by_minisat(os.path.join(dir_name, filename), verb=False)\n",
@@ -242,19 +240,19 @@
        "    <tr>\n",
        "      <th>janus</th>\n",
        "      <td>12</td>\n",
-       "      <td>116</td>\n",
-       "      <td>0.629</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0.212</td>\n",
-       "      <td>3811</td>\n",
-       "      <td>1.958</td>\n",
-       "      <td>731</td>\n",
-       "      <td>19.808220</td>\n",
-       "      <td>9.712</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>10.64952</td>\n",
-       "      <td>118</td>\n",
-       "      <td>147</td>\n",
+       "      <td>141</td>\n",
+       "      <td>0.969</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.491</td>\n",
+       "      <td>4358</td>\n",
+       "      <td>3.328</td>\n",
+       "      <td>849</td>\n",
+       "      <td>23.357300</td>\n",
+       "      <td>14.857</td>\n",
+       "      <td>6.82</td>\n",
+       "      <td>33.62521</td>\n",
+       "      <td>131</td>\n",
+       "      <td>210</td>\n",
        "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>12</td>\n",
@@ -263,15 +261,15 @@
        "      <th>minisat</th>\n",
        "      <td>19</td>\n",
        "      <td>1383</td>\n",
-       "      <td>6.771</td>\n",
+       "      <td>7.191</td>\n",
        "      <td>1814</td>\n",
-       "      <td>1.167</td>\n",
+       "      <td>1.311</td>\n",
        "      <td>32252</td>\n",
-       "      <td>15.020</td>\n",
+       "      <td>15.875</td>\n",
        "      <td>8726</td>\n",
-       "      <td>0.181645</td>\n",
-       "      <td>27.703</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.198659</td>\n",
+       "      <td>29.422</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -285,19 +283,19 @@
       ],
       "text/plain": [
        "         restarts  conflicts  conflict cost  decisions  decisions cost  \\\n",
-       "janus          12        116          0.629         29           0.212   \n",
-       "minisat        19       1383          6.771       1814           1.167   \n",
+       "janus          12        141          0.969         35           0.491   \n",
+       "minisat        19       1383          7.191       1814           1.311   \n",
        "\n",
        "         propagations  propagations cost  conflict literals  actual CPU time  \\\n",
-       "janus            3811              1.958                731        19.808220   \n",
-       "minisat         32252             15.020               8726         0.181645   \n",
+       "janus            4358              3.328                849        23.357300   \n",
+       "minisat         32252             15.875               8726         0.198659   \n",
        "\n",
        "         solving time  annealing time  simulation time  \\\n",
-       "janus           9.712             5.3         10.64952   \n",
-       "minisat        27.703             0.0          0.00000   \n",
+       "janus          14.857            6.82         33.62521   \n",
+       "minisat        29.422            0.00          0.00000   \n",
        "\n",
        "         quantum success number  quantum conflict number  \\\n",
-       "janus                       118                      147   \n",
+       "janus                       131                      210   \n",
        "minisat                       0                        0   \n",
        "\n",
        "         quantum one time solve number  is satisfiable  is sat  \n",
