--- a/examples/ipynb/6_1_constrained_binary_optimization.ipynb
+++ b/examples/ipynb/6_1_constrained_binary_optimization.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Constained Binary Optimization with Commute Hamiltonian-based QAOA\n",
     "\n",
-    "**Author:** Debin Xiang & Qifan Jiang\n",
+    "**Author:** Qifan Jiang & Debin Xiang & Tianyao Chu\n",
     "\n",
     "**Date:** 02/02/2025\n",
     "\n",
@@ -34,9 +34,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir(\"..\")\n",
-    "import sys\n",
-    "sys.path.append('..')\n",
+    "os.chdir(\"../..\")\n",
     "import logging\n",
     "logging.basicConfig(level=logging.WARN)\n",
     "\n",
@@ -157,9 +155,9 @@
      "output_type": "stream",
      "text": [
       "Quantum optimized assignment:\n",
-      "Solution Probability: 0.046875, Assignment: [0, 0, 0, 1, 0]\n",
-      "Solution Probability: 0.7861328125, Assignment: [1, 0, 1, 0, 0]\n",
-      "Solution Probability: 0.1669921875, Assignment: [1, 0, 1, 1, 1]\n"
+      "Solution Probability: 0.0830078125, Assignment: [0, 0, 0, 1, 0]\n",
+      "Solution Probability: 0.7060546875, Assignment: [1, 0, 1, 0, 0]\n",
+      "Solution Probability: 0.2109375, Assignment: [1, 0, 1, 1, 1]\n"
      ]
     }
    ],
@@ -181,10 +179,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Solution Probability: 16.69921875\n",
+      "Best Solution Probability: 21.09375\n",
       "In Constraints Probability: 100.0\n",
-      "ARG: 0.439941404050293\n",
-      "Iteration count: 29\n"
+      "ARG: 0.43603515406982424\n",
+      "Iteration count: 27\n"
      ]
     }
    ],
@@ -195,6 +193,20 @@
     "print(f\"In Constraints Probability: {in_constraints_prob}\")\n",
     "print(f\"ARG: {ARG}\")\n",
     "print(f\"Iteration count: {iter_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reproduce the results in our paper\n",
+    "\n",
+    "Execute \"[examples/data/chocoq_examples/evaluate.py][1]\" to reproduce Table II and visulize it in \"[examples/data/chocoq_examples/visualize.ipynb][2]\".\n",
+    "\n",
+    "[1]: ../data/chocoq_examples/evaluate.py\n",
+    "[2]: ../data/chocoq_examples/visualize.ipynb\n",
+    "\n",
+    "The evaluation code has only been tested on Linux. You can directly visualize the result data in the Jupyter notebook."
    ]
   }
  ],
