--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -53,6 +53,7 @@
     "```bash\n",
     "  git clone git@github.com:JanusQ/JanusQ.git\n",
     "  cd JanusQ\n",
+    "  conda create -n janusq python=3.10\n",
     "  pip install -r requirements.txt\n",
     "```  \n",
     "\n",
@@ -116,7 +117,7 @@
     "    Run following command\n",
     "\n",
     "    ```bash\n",
-    "      chmod +x janusq/hyqsat/minisat_core\n",
+    "      chmod +x janusq/application/hyqsat/solver/minisat_core\n",
     "    ```\n",
     "\n",
     "2. Error \"Library not loaded: @rpath/libpython3.10.dylib\" \n",
@@ -124,7 +125,7 @@
     "    Run following command\n",
     "\n",
     "    ```bash\n",
-    "      install_name_tool -add_rpath /path/to/python3.10/lib janusq/hyqsat/minisat_core\n",
+    "      install_name_tool -add_rpath /path/to/python3.10/lib janusq/application/hyqsat/solver/minisat_core\n",
     "    ```"
    ]
   },
@@ -142,9 +143,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir(\"..\")\n",
-    "import sys\n",
-    "sys.path.append('..')\n",
+    "os.chdir(\"../..\")\n",
     "import logging\n",
     "logging.basicConfig(level=logging.WARN)"
    ]
@@ -165,7 +164,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:00<00:00, 378.25it/s]\n"
+      "100%|██████████| 300/300 [00:02<00:00, 141.79it/s]\n"
      ]
     }
    ],
@@ -215,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'111': 1, '011': 11, '110': 14, '001': 595, '100': 887, '101': 68, '010': 169, '000': 8255}, {'000': 654, '010': 15, '111': 11, '011': 177, '101': 850, '110': 2, '100': 75, '001': 8216}, {'111': 1, '011': 14, '110': 19, '001': 634, '100': 883, '000': 8183, '010': 196, '101': 70}, {'101': 4, '011': 644, '111': 60, '010': 8076, '000': 315, '001': 18, '100': 28, '110': 855}, {'101': 27, '100': 6, '110': 63, '001': 285, '111': 876, '011': 8064, '000': 24, '010': 655}, {'101': 4, '011': 594, '111': 67, '010': 8175, '000': 288, '100': 21, '001': 17, '110': 834}, {'111': 1, '011': 14, '101': 70, '001': 597, '100': 874, '110': 20, '010': 192, '000': 8232}, {'110': 2, '001': 8287, '100': 61, '111': 13, '011': 159, '010': 20, '000': 625, '101': 833}, {'111': 2, '011': 13, '110': 20, '100': 822, '001': 617, '101': 60, '010': 181, '000': 8285}, {'111': 21, '010': 7, '000': 493, '001': 45, '100': 8584, '110': 200, '101': 650}, {'010': 1, '000': 38, '011': 9, '111': 205, '100': 711, '001': 560, '110': 18, '101': 8458}, {'111': 14, '100': 8553, '001': 32, '110': 214, '010': 8, '000': 499, '101': 680}, {'101': 23, '001': 1, '110': 8411, '100': 337, '011': 36, '111': 632, '000': 14, '010': 546}, {'000': 3, '010': 51, '101': 297, '111': 8480, '011': 481, '001': 16, '100': 15, '110': 657}, {'101': 14, '001': 3, '110': 8493, '100': 334, '111': 616, '011': 33, '000': 21, '010': 486}, {'111': 12, '100': 8616, '001': 35, '110': 205, '101': 615, '010': 12, '000': 505}, {'011': 10, '111': 181, '110': 15, '001': 516, '100': 690, '000': 43, '101': 8545}, {'111': 13, '100': 8587, '001': 35, '110': 168, '101': 659, '010': 8, '000': 530}, {'111': 2, '011': 12, '110': 24, '100': 854, '001': 600, '101': 71, '010': 203, '000': 8234}, {'110': 2, '001': 8308, '100': 66, '111': 25, '011': 174, '010': 16, '000': 615, '101': 794}, {'101': 67, '110': 17, '001': 648, '100': 879, '111': 1, '011': 12, '010': 189, '000': 8187}, {'101': 1, '110': 845, '100': 31, '001': 33, '111': 72, '011': 590, '000': 287, '010': 8141}, {'101': 34, '011': 8097, '111': 841, '010': 614, '000': 14, '100': 1, '001': 342, '110': 57}, {'101': 2, '011': 637, '111': 67, '010': 8049, '000': 336, '001': 15, '100': 31, '110': 863}, {'111': 1, '011': 17, '110': 28, '100': 845, '001': 599, '000': 8234, '010': 203, '101': 73}, {'000': 655, '010': 19, '111': 22, '011': 190, '101': 866, '100': 73, '001': 8175}]\n"
+      "[{'111': 1, '011': 12, '101': 8, '110': 56, '001': 125, '100': 722, '010': 604, '000': 8472}, {'110': 4, '100': 42, '001': 8065, '011': 597, '111': 55, '101': 639, '010': 43, '000': 555}, {'101': 9, '011': 8, '100': 715, '001': 117, '110': 44, '010': 592, '000': 8515}, {'001': 3, '110': 781, '100': 11, '111': 7, '011': 121, '000': 184, '010': 8893}, {'101': 11, '110': 43, '001': 151, '011': 8482, '111': 690, '000': 17, '010': 606}, {'111': 9, '011': 135, '010': 8923, '000': 155, '100': 22, '110': 756}, {'101': 10, '011': 8, '001': 120, '100': 689, '110': 50, '010': 610, '000': 8513}, {'000': 567, '010': 37, '111': 53, '011': 566, '101': 697, '110': 7, '100': 47, '001': 8026}, {'101': 10, '111': 1, '011': 11, '001': 118, '100': 730, '110': 52, '010': 639, '000': 8439}, {'111': 7, '000': 65, '010': 5, '101': 125, '110': 668, '100': 9130}, {'000': 6, '110': 35, '100': 576, '001': 85, '011': 6, '111': 646, '101': 8646}, {'111': 10, '010': 4, '000': 92, '101': 132, '110': 641, '100': 9121}, {'011': 1, '111': 142, '110': 9590, '100': 185, '000': 2, '010': 77, '101': 3}, {'010': 6, '110': 613, '100': 13, '111': 9152, '011': 65, '101': 151}, {'110': 9588, '100': 186, '011': 1, '111': 138, '000': 3, '010': 84}, {'111': 10, '010': 5, '000': 67, '101': 114, '001': 1, '110': 658, '100': 9145}, {'000': 9, '011': 7, '111': 627, '110': 34, '100': 571, '001': 69, '101': 8683}, {'111': 12, '000': 84, '010': 6, '101': 125, '110': 625, '100': 9148}, {'011': 10, '101': 14, '001': 119, '100': 695, '110': 62, '010': 585, '000': 8515}, {'011': 608, '111': 37, '110': 3, '100': 48, '001': 8061, '000': 587, '010': 42, '101': 614}, {'101': 8, '011': 9, '001': 109, '100': 737, '110': 58, '000': 8494, '010': 585}, {'001': 6, '110': 726, '100': 12, '010': 8887, '000': 190, '111': 13, '011': 166}, {'101': 17, '011': 8441, '111': 690, '100': 1, '001': 153, '110': 52, '000': 10, '010': 636}, {'001': 4, '110': 728, '100': 14, '111': 17, '011': 143, '000': 163, '010': 8931}, {'011': 7, '101': 10, '001': 100, '100': 732, '110': 43, '010': 599, '000': 8509}, {'011': 605, '111': 62, '101': 652, '010': 34, '000': 535, '110': 2, '100': 56, '001': 8054}]\n"
      ]
     }
    ],
@@ -272,7 +271,7 @@
     "from janusq.application.hyqsat import readCNF\n",
     "\n",
     "# input cnf flie\n",
-    "file_path = \"./data/cnf_examples/UF50/uf50-01.cnf\"\n",
+    "file_path = \"./examples/data/cnf_examples/UF50/uf50-01.cnf\"\n",
     "print(readCNF(file_path))"
    ]
   },
@@ -307,9 +306,7 @@
    ],
    "source": [
     "import os\n",
-    "os.chdir(\"..\")\n",
-    "import sys\n",
-    "sys.path.append('..')\n",
+    "os.chdir(\"../..\")\n",
     "import logging\n",
     "logging.basicConfig(level=logging.WARN)\n",
     "\n",
@@ -328,7 +325,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chocoq",
+   "display_name": "janusq",
    "language": "python",
    "name": "python3"
   },
