--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -164,7 +164,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:02<00:00, 141.79it/s]\n"
+      "100%|██████████| 300/300 [00:00<00:00, 381.10it/s]\n"
      ]
     }
    ],
@@ -192,12 +192,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test QuFEM"
+    "### Test MorphQPV"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "producing input circuits for random sampling: 100%|██████████| 8/8 [00:00<00:00, 588.76it/s]\n",
+      "producing input states for random sampling: 100%|██████████| 8/8 [00:00<00:00, 166.75it/s]\n",
+      "producing output states:   0%|          | 0/8 [00:00<?, ?it/s]/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/pennylane/_qubit_device.py:653: UserWarning: Requested state or density matrix with finite shots; the returned state information is analytic and is unaffected by sampling. To silence this warning, set shots=None on the device.\n",
+      "  warnings.warn(\n",
+      "producing output states: 100%|██████████| 8/8 [00:00<00:00, 298.39it/s]\n",
+      "sgd optimizing converge:  67%|██████▋   | 670/1000 [00:41<00:20, 16.29it/s, loss=3.0515246, min_loss=0.5092561]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'assume': [([0], IsPure, ()), ([0], Equal, (0.4,)), ([1], IsPure, ())], 'gurrantee': [([0, 1], NotEqual, ())], 'verify': {'optimal_input_state': Array([ 0.60621727-0.23338176j, -0.13886145+0.4294483j ,\n",
+      "        0.40029827+0.20627585j, -0.41366568-0.01615516j], dtype=complex64), 'optimal_gurrantee_value': Array(0.33473182, dtype=float32), 'is_assume_satisfied': [Array(0.01565218, dtype=float32), Array(0.14357759, dtype=float32), Array(0.01529455, dtype=float32)]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test MorphQPV\n",
+    "from janusq.verification.morphqpv import MorphQC,Config\n",
+    "from janusq.verification.morphqpv import IsPure,Equal,NotEqual\n",
+    "from janusq.verification.morphqpv import Expectation\n",
+    "from janusq.verification.morphqpv import pauliX,pauliY\n",
+    "\n",
+    "# define quantum program with assertions\n",
+    "myconfig = Config()\n",
+    "myconfig.solver = 'sgd'\n",
+    "with MorphQC(config=myconfig) as morphQC:\n",
+    "    morphQC.add_tracepoint(0,1) ## the state after the first 3 qubits is labeled as tracepoint 0\n",
+    "    morphQC.assume(0,IsPure()) ## the state in tracepoint 0 is assumed to be pure\n",
+    "    morphQC.assume(0,Equal(Expectation(pauliX@pauliY)),0.4)\n",
+    "    morphQC.x([1,3])\n",
+    "    morphQC.y([0,1,2])\n",
+    "    for i in range(4):\n",
+    "        morphQC.cnot([i, i+1])\n",
+    "    morphQC.s([0,2,4])\n",
+    "    morphQC.add_tracepoint(2,4) ## the state after qubit 2 and 4 is labeled as tracepoint 1\n",
+    "    morphQC.assume(1,IsPure()) ## the state in tracepoint 1 is assumed to be pure\n",
+    "    morphQC.guarantee([0,1],NotEqual()) ## the state in tracepoint 0,1 and 2 are guaranteed to be different\n",
+    "print(morphQC.assertion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test QuFEM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +272,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'111': 1, '011': 12, '101': 8, '110': 56, '001': 125, '100': 722, '010': 604, '000': 8472}, {'110': 4, '100': 42, '001': 8065, '011': 597, '111': 55, '101': 639, '010': 43, '000': 555}, {'101': 9, '011': 8, '100': 715, '001': 117, '110': 44, '010': 592, '000': 8515}, {'001': 3, '110': 781, '100': 11, '111': 7, '011': 121, '000': 184, '010': 8893}, {'101': 11, '110': 43, '001': 151, '011': 8482, '111': 690, '000': 17, '010': 606}, {'111': 9, '011': 135, '010': 8923, '000': 155, '100': 22, '110': 756}, {'101': 10, '011': 8, '001': 120, '100': 689, '110': 50, '010': 610, '000': 8513}, {'000': 567, '010': 37, '111': 53, '011': 566, '101': 697, '110': 7, '100': 47, '001': 8026}, {'101': 10, '111': 1, '011': 11, '001': 118, '100': 730, '110': 52, '010': 639, '000': 8439}, {'111': 7, '000': 65, '010': 5, '101': 125, '110': 668, '100': 9130}, {'000': 6, '110': 35, '100': 576, '001': 85, '011': 6, '111': 646, '101': 8646}, {'111': 10, '010': 4, '000': 92, '101': 132, '110': 641, '100': 9121}, {'011': 1, '111': 142, '110': 9590, '100': 185, '000': 2, '010': 77, '101': 3}, {'010': 6, '110': 613, '100': 13, '111': 9152, '011': 65, '101': 151}, {'110': 9588, '100': 186, '011': 1, '111': 138, '000': 3, '010': 84}, {'111': 10, '010': 5, '000': 67, '101': 114, '001': 1, '110': 658, '100': 9145}, {'000': 9, '011': 7, '111': 627, '110': 34, '100': 571, '001': 69, '101': 8683}, {'111': 12, '000': 84, '010': 6, '101': 125, '110': 625, '100': 9148}, {'011': 10, '101': 14, '001': 119, '100': 695, '110': 62, '010': 585, '000': 8515}, {'011': 608, '111': 37, '110': 3, '100': 48, '001': 8061, '000': 587, '010': 42, '101': 614}, {'101': 8, '011': 9, '001': 109, '100': 737, '110': 58, '000': 8494, '010': 585}, {'001': 6, '110': 726, '100': 12, '010': 8887, '000': 190, '111': 13, '011': 166}, {'101': 17, '011': 8441, '111': 690, '100': 1, '001': 153, '110': 52, '000': 10, '010': 636}, {'001': 4, '110': 728, '100': 14, '111': 17, '011': 143, '000': 163, '010': 8931}, {'011': 7, '101': 10, '001': 100, '100': 732, '110': 43, '010': 599, '000': 8509}, {'011': 605, '111': 62, '101': 652, '010': 34, '000': 535, '110': 2, '100': 56, '001': 8054}]\n"
+      "[{'011': 5, '110': 2, '100': 280, '001': 641, '101': 22, '010': 53, '000': 8997}, {'001': 9577, '100': 1, '000': 42, '111': 2, '011': 60, '101': 318}, {'011': 1, '100': 280, '001': 649, '101': 26, '010': 51, '000': 8993}, {'111': 20, '000': 1, '110': 318, '011': 639, '010': 9022}, {'001': 4, '111': 283, '110': 1, '010': 46, '011': 9666}, {'111': 17, '000': 1, '110': 293, '011': 621, '010': 9068}, {'011': 6, '110': 2, '001': 608, '100': 283, '101': 24, '010': 66, '000': 9011}, {'010': 1, '000': 41, '101': 323, '111': 1, '011': 54, '100': 1, '001': 9579}, {'011': 4, '110': 2, '100': 276, '001': 597, '101': 14, '010': 51, '000': 9056}, {'111': 9, '100': 8801, '001': 28, '110': 65, '010': 2, '000': 455, '101': 640}, {'000': 2, '011': 2, '111': 51, '100': 37, '001': 440, '101': 9468}, {'111': 2, '100': 8870, '001': 24, '110': 59, '000': 437, '101': 608}, {'011': 38, '111': 641, '000': 1, '010': 391, '100': 2, '110': 8927}, {'010': 3, '101': 2, '110': 48, '011': 445, '111': 9502}, {'111': 603, '011': 36, '010': 459, '110': 8902}, {'111': 3, '011': 1, '100': 8843, '001': 36, '110': 60, '010': 2, '000': 434, '101': 621}, {'000': 2, '110': 2, '100': 46, '001': 485, '011': 5, '111': 61, '101': 9399}, {'111': 2, '100': 8891, '001': 40, '110': 56, '101': 597, '000': 414}, {'101': 14, '110': 2, '001': 659, '100': 298, '011': 8, '010': 68, '000': 8951}, {'111': 2, '000': 44, '011': 56, '101': 317, '001': 9581}, {'011': 3, '110': 3, '100': 272, '001': 587, '101': 14, '010': 67, '000': 9054}, {'111': 18, '000': 2, '110': 289, '011': 654, '010': 9037}, {'001': 2, '111': 293, '110': 3, '010': 56, '011': 9646}, {'110': 300, '001': 1, '111': 23, '011': 612, '000': 2, '010': 9062}, {'110': 1, '100': 262, '001': 636, '101': 19, '011': 4, '010': 50, '000': 9028}, {'111': 5, '011': 55, '000': 39, '101': 312, '001': 9589}]\n"
      ]
     }
    ],
@@ -255,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
