--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -54,6 +54,7 @@
     "  git clone git@github.com:JanusQ/JanusQ.git\n",
     "  cd JanusQ\n",
     "  conda create -n janusq python=3.10\n",
+    "  conda activate janusq\n",
     "  pip install -r requirements.txt\n",
     "```  \n",
     "\n",
