add chocoq data

--- a/examples/ipynb/1_1_install_janusq.ipynb
+++ b/examples/ipynb/1_1_install_janusq.ipynb
@@ -15,16 +15,16 @@
     "Pull docker image\n",
     "\n",
     "```bash\n",
-    "  docker pull janusq/janusq:latest\n",
+    "  docker pull janusq/janusq3:latest\n",
     "```\n",
     "\n",
     "Run docker image\n",
     "\n",
     "```bash\n",
-    "  docker run -itd -p 8888:22 -p 9999:23 --name tutorial janusq/janusq\n",
+    "  docker run -itd -p 8888:22 -p 9999:23 --name tutorial janusq/janusq3\n",
     "```\n",
     "\n",
-    "The docker can be accessed via\n",
+    "The docker can be accessed via (password is \"root\"):\n",
     "\n",
     "```bash\n",
     "  ssh root@localhost -p 8888\n",
@@ -40,7 +40,7 @@
     "\n",
     "**From wheel**\n",
     "\n",
-    "Download [janusq.whl](https://github.com/JanusQ/JanusQ/blob/main/dist/janusq-0.1.0-py3-none-any.whl) and install with `pip`\n",
+    "Download [janusq.whl](https://github.com/JanusQ/JanusQ/blob/main/dist/janusq-0.3.0-py3-none-any.whl) and install with `pip`\n",
     "\n",
     "```bash\n",
     "  pip install janusq.whl\n",
