--- a/examples/data/chocoq_examples/visualize.ipynb
+++ b/examples/data/chocoq_examples/visualize.ipynb
@@ -84,18 +84,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>F1</th>\n",
-       "      <td>12.177734</td>\n",
-       "      <td>7.197266</td>\n",
-       "      <td>1.328125</td>\n",
-       "      <td>82.402344</td>\n",
-       "      <td>22.246094</td>\n",
-       "      <td>48.310547</td>\n",
-       "      <td>10.859375</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>33.194468</td>\n",
-       "      <td>17.744957</td>\n",
-       "      <td>38.852053</td>\n",
-       "      <td>0.071980</td>\n",
+       "      <td>5.644531</td>\n",
+       "      <td>7.177734</td>\n",
+       "      <td>3.750000</td>\n",
+       "      <td>44.619141</td>\n",
+       "      <td>19.111328</td>\n",
+       "      <td>44.531250</td>\n",
+       "      <td>12.832031</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>5.215580e+01</td>\n",
+       "      <td>2.607429e+01</td>\n",
+       "      <td>5.899177e+01</td>\n",
+       "      <td>3.702422e-01</td>\n",
        "      <td>40.0</td>\n",
        "      <td>65.0</td>\n",
        "      <td>30.0</td>\n",
@@ -103,37 +103,75 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F2</th>\n",
+       "      <td>0.029297</td>\n",
        "      <td>0.058594</td>\n",
-       "      <td>0.166016</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>54.589844</td>\n",
-       "      <td>0.917969</td>\n",
-       "      <td>4.072266</td>\n",
        "      <td>0.009766</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>82.210030</td>\n",
-       "      <td>57.944648</td>\n",
-       "      <td>135.631438</td>\n",
-       "      <td>0.347936</td>\n",
+       "      <td>50.400391</td>\n",
+       "      <td>0.439453</td>\n",
+       "      <td>2.255859</td>\n",
+       "      <td>0.273438</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>9.510269e+01</td>\n",
+       "      <td>6.099691e+01</td>\n",
+       "      <td>1.272459e+02</td>\n",
+       "      <td>9.300158e-02</td>\n",
        "      <td>64.0</td>\n",
        "      <td>94.0</td>\n",
        "      <td>75.0</td>\n",
-       "      <td>172.0</td>\n",
+       "      <td>377.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>25.566406</td>\n",
+       "      <td>0.048828</td>\n",
+       "      <td>2.871094</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>8.489098e+01</td>\n",
+       "      <td>6.620952e+01</td>\n",
+       "      <td>1.514285e+02</td>\n",
+       "      <td>2.510607e-01</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>1337.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F4</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.032552</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>31.982422</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.374349</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.830051e+02</td>\n",
+       "      <td>1.041314e+02</td>\n",
+       "      <td>2.523741e+02</td>\n",
+       "      <td>5.819760e-01</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>1995.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>G1</th>\n",
-       "      <td>0.917969</td>\n",
-       "      <td>11.884766</td>\n",
-       "      <td>0.029297</td>\n",
-       "      <td>56.337891</td>\n",
-       "      <td>3.837891</td>\n",
-       "      <td>37.255859</td>\n",
-       "      <td>0.341797</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>96.402805</td>\n",
-       "      <td>40.700281</td>\n",
-       "      <td>156.394436</td>\n",
-       "      <td>0.235654</td>\n",
+       "      <td>0.722656</td>\n",
+       "      <td>13.896484</td>\n",
+       "      <td>0.146484</td>\n",
+       "      <td>26.142578</td>\n",
+       "      <td>3.105469</td>\n",
+       "      <td>20.097656</td>\n",
+       "      <td>0.732422</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.498747e+02</td>\n",
+       "      <td>7.648733e+01</td>\n",
+       "      <td>2.205148e+02</td>\n",
+       "      <td>4.402576e-01</td>\n",
        "      <td>135.2</td>\n",
        "      <td>200.0</td>\n",
        "      <td>60.0</td>\n",
@@ -141,60 +179,136 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>G2</th>\n",
-       "      <td>0.019531</td>\n",
-       "      <td>0.498047</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>7.392578</td>\n",
-       "      <td>0.419922</td>\n",
-       "      <td>20.986328</td>\n",
+       "      <td>0.078125</td>\n",
        "      <td>0.068359</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>214.590636</td>\n",
-       "      <td>106.759419</td>\n",
-       "      <td>306.111009</td>\n",
-       "      <td>0.867464</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>17.539062</td>\n",
+       "      <td>0.371094</td>\n",
+       "      <td>49.843750</td>\n",
+       "      <td>0.087891</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.951689e+02</td>\n",
+       "      <td>4.102747e+01</td>\n",
+       "      <td>3.039920e+02</td>\n",
+       "      <td>7.887457e-01</td>\n",
        "      <td>158.0</td>\n",
        "      <td>248.0</td>\n",
        "      <td>75.0</td>\n",
-       "      <td>145.2</td>\n",
+       "      <td>369.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.009766</td>\n",
+       "      <td>0.039062</td>\n",
+       "      <td>39.785156</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>3.892068e+02</td>\n",
+       "      <td>1.036665e+02</td>\n",
+       "      <td>5.481647e+02</td>\n",
+       "      <td>1.604839e+00</td>\n",
+       "      <td>472.2</td>\n",
+       "      <td>563.4</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>595.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G4</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>66.585286</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>99.980469</td>\n",
+       "      <td>3.671064e+02</td>\n",
+       "      <td>7.594769e+01</td>\n",
+       "      <td>5.571472e+02</td>\n",
+       "      <td>1.679537e+00</td>\n",
+       "      <td>492.8</td>\n",
+       "      <td>611.8</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>1640.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K1</th>\n",
-       "      <td>2.861328</td>\n",
-       "      <td>18.027344</td>\n",
-       "      <td>1.748047</td>\n",
-       "      <td>83.066406</td>\n",
-       "      <td>6.406250</td>\n",
-       "      <td>37.226562</td>\n",
-       "      <td>3.984375</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>213.352503</td>\n",
-       "      <td>64.633532</td>\n",
-       "      <td>227.316007</td>\n",
-       "      <td>0.168692</td>\n",
-       "      <td>81.6</td>\n",
-       "      <td>139.0</td>\n",
+       "      <td>1.298828</td>\n",
+       "      <td>10.166016</td>\n",
+       "      <td>1.630859</td>\n",
+       "      <td>44.687500</td>\n",
+       "      <td>2.841797</td>\n",
+       "      <td>32.773438</td>\n",
+       "      <td>5.312500</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.672865e+10</td>\n",
+       "      <td>3.862822e+09</td>\n",
+       "      <td>2.052043e+10</td>\n",
+       "      <td>1.100000e+08</td>\n",
+       "      <td>84.4</td>\n",
+       "      <td>139.4</td>\n",
        "      <td>40.0</td>\n",
-       "      <td>114.5</td>\n",
+       "      <td>114.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K2</th>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.019531</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>22.226562</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.937500</td>\n",
        "      <td>0.019531</td>\n",
-       "      <td>60.117188</td>\n",
+       "      <td>60.068359</td>\n",
        "      <td>0.009766</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>358.891573</td>\n",
-       "      <td>66.409780</td>\n",
-       "      <td>542.475797</td>\n",
-       "      <td>2.014071</td>\n",
-       "      <td>142.4</td>\n",
-       "      <td>198.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>6.402153e+02</td>\n",
+       "      <td>1.178097e+02</td>\n",
+       "      <td>7.639946e+02</td>\n",
+       "      <td>1.073654e+00</td>\n",
+       "      <td>147.4</td>\n",
+       "      <td>201.0</td>\n",
        "      <td>90.0</td>\n",
-       "      <td>384.1</td>\n",
+       "      <td>385.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>K3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>50.048828</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>8.435748e+02</td>\n",
+       "      <td>1.514613e+02</td>\n",
+       "      <td>7.884370e+02</td>\n",
+       "      <td>5.076260e+00</td>\n",
+       "      <td>182.4</td>\n",
+       "      <td>242.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>536.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>K4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.060547</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>66.634115</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.814559e+02</td>\n",
+       "      <td>3.687773e+03</td>\n",
+       "      <td>6.400000e+08</td>\n",
+       "      <td>212.2</td>\n",
+       "      <td>270.4</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>613.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -203,30 +317,63 @@
       "text/plain": [
        "   Success rate (%)                                 In-constraints rate (%)  \\\n",
        "            Penalty     Cyclic       HEA    Choco-Q                 Penalty   \n",
-       "F1        12.177734   7.197266  1.328125  82.402344               22.246094   \n",
-       "F2         0.058594   0.166016  0.000000  54.589844                0.917969   \n",
-       "G1         0.917969  11.884766  0.029297  56.337891                3.837891   \n",
-       "G2         0.019531   0.498047  0.000000   7.392578                0.419922   \n",
-       "K1         2.861328  18.027344  1.748047  83.066406                6.406250   \n",
-       "K2         0.000000   0.019531  0.000000  22.226562                0.019531   \n",
+       "F1         5.644531   7.177734  3.750000  44.619141               19.111328   \n",
+       "F2         0.029297   0.058594  0.009766  50.400391                0.439453   \n",
+       "F3         0.000000   0.000000  0.000000  25.566406                0.048828   \n",
+       "F4         0.000000   0.032552  0.000000  31.982422                0.000000   \n",
+       "G1         0.722656  13.896484  0.146484  26.142578                3.105469   \n",
+       "G2         0.078125   0.068359  0.000000  17.539062                0.371094   \n",
+       "G3         0.000000   0.000000  0.000000   0.009766                0.039062   \n",
+       "G4         0.000000   0.000000  0.000000   0.000000                0.000000   \n",
+       "K1         1.298828  10.166016  1.630859  44.687500                2.841797   \n",
+       "K2         0.000000   0.000000  0.000000  10.937500                0.019531   \n",
+       "K3         0.000000   0.000000  0.000000   0.000000                0.000000   \n",
+       "K4              NaN   0.000000  0.000000   2.060547                     NaN   \n",
        "\n",
-       "                                 Approximation ratio gap (ARG)              \\\n",
-       "       Cyclic        HEA Choco-Q                       Penalty      Cyclic   \n",
-       "F1  48.310547  10.859375   100.0                     33.194468   17.744957   \n",
-       "F2   4.072266   0.009766   100.0                     82.210030   57.944648   \n",
-       "G1  37.255859   0.341797   100.0                     96.402805   40.700281   \n",
-       "G2  20.986328   0.068359   100.0                    214.590636  106.759419   \n",
-       "K1  37.226562   3.984375   100.0                    213.352503   64.633532   \n",
-       "K2  60.117188   0.009766   100.0                    358.891573   66.409780   \n",
+       "                                     Approximation ratio gap (ARG)  \\\n",
+       "       Cyclic        HEA     Choco-Q                       Penalty   \n",
+       "F1  44.531250  12.832031  100.000000                  5.215580e+01   \n",
+       "F2   2.255859   0.273438  100.000000                  9.510269e+01   \n",
+       "F3   2.871094   0.000000  100.000000                  8.489098e+01   \n",
+       "F4   0.374349   0.000000  100.000000                  1.830051e+02   \n",
+       "G1  20.097656   0.732422  100.000000                  1.498747e+02   \n",
+       "G2  49.843750   0.087891  100.000000                  1.951689e+02   \n",
+       "G3  39.785156   0.000000  100.000000                  3.892068e+02   \n",
+       "G4  66.585286   0.000000   99.980469                  3.671064e+02   \n",
+       "K1  32.773438   5.312500  100.000000                  1.672865e+10   \n",
+       "K2  60.068359   0.009766  100.000000                  6.402153e+02   \n",
+       "K3  50.048828   0.000000  100.000000                  8.435748e+02   \n",
+       "K4  66.634115   0.000000  100.000000                           NaN   \n",
        "\n",
-       "                         Circuit depth                       \n",
-       "           HEA   Choco-Q       Penalty Cyclic   HEA Choco-Q  \n",
-       "F1   38.852053  0.071980          40.0   65.0  30.0    44.0  \n",
-       "F2  135.631438  0.347936          64.0   94.0  75.0   172.0  \n",
-       "G1  156.394436  0.235654         135.2  200.0  60.0   167.3  \n",
-       "G2  306.111009  0.867464         158.0  248.0  75.0   145.2  \n",
-       "K1  227.316007  0.168692          81.6  139.0  40.0   114.5  \n",
-       "K2  542.475797  2.014071         142.4  198.0  90.0   384.1  "
+       "                                             Circuit depth                \\\n",
+       "          Cyclic           HEA       Choco-Q       Penalty Cyclic    HEA   \n",
+       "F1  2.607429e+01  5.899177e+01  3.702422e-01          40.0   65.0   30.0   \n",
+       "F2  6.099691e+01  1.272459e+02  9.300158e-02          64.0   94.0   75.0   \n",
+       "F3  6.620952e+01  1.514285e+02  2.510607e-01          68.0   98.0  105.0   \n",
+       "F4  1.041314e+02  2.523741e+02  5.819760e-01          80.0  118.0  140.0   \n",
+       "G1  7.648733e+01  2.205148e+02  4.402576e-01         135.2  200.0   60.0   \n",
+       "G2  4.102747e+01  3.039920e+02  7.887457e-01         158.0  248.0   75.0   \n",
+       "G3  1.036665e+02  5.481647e+02  1.604839e+00         472.2  563.4  120.0   \n",
+       "G4  7.594769e+01  5.571472e+02  1.679537e+00         492.8  611.8  140.0   \n",
+       "K1  3.862822e+09  2.052043e+10  1.100000e+08          84.4  139.4   40.0   \n",
+       "K2  1.178097e+02  7.639946e+02  1.073654e+00         147.4  201.0   90.0   \n",
+       "K3  1.514613e+02  7.884370e+02  5.076260e+00         182.4  242.0  120.0   \n",
+       "K4  2.814559e+02  3.687773e+03  6.400000e+08         212.2  270.4  135.0   \n",
+       "\n",
+       "            \n",
+       "   Choco-Q  \n",
+       "F1    44.0  \n",
+       "F2   377.0  \n",
+       "F3  1337.0  \n",
+       "F4  1995.0  \n",
+       "G1   167.3  \n",
+       "G2   369.6  \n",
+       "G3   595.2  \n",
+       "G4  1640.4  \n",
+       "K1   114.8  \n",
+       "K2   385.5  \n",
+       "K3   536.5  \n",
+       "K4   613.9  "
       ]
      },
      "execution_count": 2,
@@ -235,7 +382,7 @@
     }
    ],
    "source": [
-    "problem_scale = 2\n",
+    "problem_scale = 4\n",
     "file_path = f\"./scale_{problem_scale}\"\n",
     "\n",
     "df1 = pd.read_csv(f\"{file_path}/evaluate_depth.csv\")\n",
@@ -328,9 +475,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Improvement relative to Cyclic</th>\n",
-       "      <td>1.109449</td>\n",
-       "      <td>250.410655</td>\n",
-       "      <td>6.404186</td>\n",
+       "      <td>0.811083</td>\n",
+       "      <td>351.955239</td>\n",
+       "      <td>53.95638</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -338,10 +485,10 @@
       ],
       "text/plain": [
        "                                Circuit Depth  Success Rate  \\\n",
-       "Improvement relative to Cyclic       1.109449    250.410655   \n",
+       "Improvement relative to Cyclic       0.811083    351.955239   \n",
        "\n",
        "                                In-constraints Rate  \n",
-       "Improvement relative to Cyclic             6.404186  "
+       "Improvement relative to Cyclic             53.95638  "
       ]
      },
      "execution_count": 3,
